# flexaudio

./: .gitignore  CHANGELOG.md  Cargo.toml  README.ja.md  README.md  README.python.ja.md  README.python.md  pyproject.toml
.github/workflows/: ci.yml  release-crates.yml  release-npm.yml  release-pypi.yml
bindings/flexaudio-py/: Cargo.toml  README.md  pyproject.toml
bindings/flexaudio-py/src/: lib.rs
bindings/pyflexaudio/: Cargo.toml  LICENSE
bindings/pyflexaudio/src/: lib.rs
crates/flexaudio/: Cargo.toml  README.md
crates/flexaudio-cli/: Cargo.toml
crates/flexaudio-cli/src/: main.rs
crates/flexaudio-core/: Cargo.toml  README.md
crates/flexaudio-core/src/: backend.rs  chunk_ring.rs  clock.rs  lib.rs  normalizer.rs  raw_ring.rs  types.rs
crates/flexaudio-ffi/: Cargo.toml  cbindgen.toml
crates/flexaudio-ffi/include/: flexaudio.h
crates/flexaudio-ffi/src/: convert.rs  error.rs  lib.rs  types.rs
crates/flexaudio-mic/: Cargo.toml  README.md
crates/flexaudio-mic/src/: lib.rs
crates/flexaudio-napi/: .gitignore  Cargo.toml  README.md  build.rs  index.d.ts  package.json
crates/flexaudio-napi/__test__/: .gitignore  realswitch.mjs  realtest.mjs  run-smoke.sh  smoke.mjs
crates/flexaudio-napi/src/: lib.rs
crates/flexaudio-os-linux/: Cargo.toml  README.md
crates/flexaudio-os-linux/src/: lib.rs
crates/flexaudio-os-macos/: Cargo.toml  README.md
crates/flexaudio-os-macos/src/: common.rs  devices.rs  lib.rs  process.rs  system.rs  tap.rs  version.rs
crates/flexaudio-os-windows/: Cargo.toml  README.md
crates/flexaudio-os-windows/src/: common.rs  lib.rs  process.rs  system.rs
crates/flexaudio-vad/: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
crates/flexaudio-vad/examples/: probe.rs
crates/flexaudio-vad/src/: config.rs  lib.rs  segmenter.rs
crates/flexaudio/src/: device_watcher.rs  lib.rs  mix.rs  mock.rs  stream.rs
crates/flexaudio/tests/: integration.rs
src/pyflexaudio/: __init__.py  _platform.py  devices.py  events.py  permissions.py  pipeline.py  registry.py  session.py  types.py
src/pyflexaudio/cli/: main.py
src/pyflexaudio/processors/: __init__.py  base.py  chain.py  channels.py  level.py  resample.py  vad.py
src/pyflexaudio/sinks/: __init__.py  base.py  callback.py  file.py  level_meter.py
src/pyflexaudio/sources/: __init__.py  base.py  mic.py  process.py  system.py
src/pyflexaudio/sources/_backends/: mic_miniaudio.py  mic_sounddevice.py  process_linux.py  process_macos.py  process_windows.py  system_linux.py  system_macos.py  system_windows.py
tests/: conftest.py  test_additional_paths.py  test_cli.py  test_devices.py  test_edge_cases.py  test_events.py  test_pipeline.py  test_registry.py  test_session.py  test_source_dispatch.py  test_types.py
tests/test_error_handling/: test_chunk_drop.py  test_device_disconnect.py  test_processor_error.py  test_sink_failure.py  test_source_switch_fail.py  test_source_timeout.py
tests/test_integration/: test_fanout_consistency.py  test_mic_to_callback.py  test_mic_to_file.py  test_source_switch.py  test_vad_pipeline.py
tests/test_output/: test_file_sink_on_off.py  test_file_sink_source_switch.py  test_wav_4gb_limit.py  test_wav_crash_recovery.py  test_wav_header.py  test_wav_int16.py
tests/test_processors/: test_chain.py  test_channels.py  test_level.py  test_resample.py  test_vad.py
tests/test_sinks/: test_callback_sink.py  test_file_sink.py  test_level_meter.py
tests/test_thread_safety/: test_concurrent_start_stop.py  test_event_delivery.py  test_pause_backpressure.py  test_shutdown_order.py  test_switch_source.py
