[package]
name = "flexaudio-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bitflags = { workspace = true }
ringbuf = { workspace = true }
rtrb = { workspace = true }
rubato = { workspace = true }
thiserror = { workspace = true }
