[package]
name = "flexaudio-mic"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cross-platform microphone capture backend (cpal) for flexaudio."
keywords = ["audio", "microphone", "capture", "cpal", "recording"]
categories = ["multimedia::audio"]
documentation = "https://docs.rs/flexaudio-mic"

[dependencies]
flexaudio-core = { path = "../flexaudio-core", version = "0.2.0" }
cpal = { workspace = true }
