[package]
name = "flexaudio"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
flexaudio-core = { path = "../flexaudio-core" }
# デバイス列挙（`devices()`）でマイク入力（cpal, 全 OS）を束ねる。
flexaudio-mic = { path = "../flexaudio-mic" }

# デバイス列挙でシステム出力 sink（PipeWire）を束ねる（Linux のみ）。
[target.'cfg(target_os = "linux")'.dependencies]
flexaudio-os-linux = { path = "../flexaudio-os-linux" }

# システム/プロセスループバック（WASAPI）を束ねる（Windows のみ）。
[target.'cfg(target_os = "windows")'.dependencies]
flexaudio-os-windows = { path = "../flexaudio-os-windows" }

# システム/プロセスループバック（CoreAudio Process Taps）を束ねる（macOS のみ）。
[target.'cfg(target_os = "macos")'.dependencies]
flexaudio-os-macos = { path = "../flexaudio-os-macos" }
